--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@fullcalendar/daygrid": "^6.1.4",
     "@fullcalendar/list": "^6.1.4",
     "@fullcalendar/timegrid": "^6.1.4",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.10",
     "@mui/styled-engine-sc": "^5.11.9",
-    "@mui/x-data-grid": "^5.17.25",
+    "@mui/x-data-grid": "^5.17.26",
     "@mui/x-date-pickers": "^6.0.1",
     "@nivo/bar": "^0.80.0",
     "@nivo/core": "^0.80.0",
@@ -27,13 +29,16 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.1",
+    "chart.js": "^4.2.1",
     "d3-ease": "^3.0.1",
+    "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
     "formik": "^2.2.9",
     "js-cookie": "^3.0.1",
     "jszip": "^3.10.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-drag-drop-files": "^2.3.7",
