--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL="https://goodmintdog54.conveyor.cloud"
+REACT_APP_API_URL="https://nextredpen52.conveyor.cloud"
 # REACT_APP_API_URL="https://localhost:7287"
