--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-REACT_APP_API_URL="https://nextredpen52.conveyor.cloud"
-# REACT_APP_API_URL="https://localhost:7287"
+# REACT_APP_API_URL="https://nextredpen52.conveyor.cloud"
+#   "homepage": "https://thinkbeerus.github.io/potch-huis-v1/",
+#   "proxy": "https://thinkbeerus.github.io/potch-huis-v1/",
+REACT_APP_API_URL="https://localhost:7287"
