--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "potch-huis",
+   "homepage": "https://thinkbeerus.github.io/potch-huis-v1/",
+   "proxy": "https://thinkbeerus.github.io/potch-huis-v1/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
