--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # REACT_APP_API_URL="https://nextredpen52.conveyor.cloud"
 #   "homepage": "https://thinkbeerus.github.io/potch-huis-v1/",
 #   "proxy": "https://thinkbeerus.github.io/potch-huis-v1/",
-REACT_APP_API_URL="https://api-potch-huis-llv4w2y22a-uc.a.run.app"
+REACT_APP_API_URL="https://firstorangecat92.conveyor.cloud/swagger"
